--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </nav>
 
 	<div class="container">
-		<img src="./images/Work_6.jpg" alt="" class="img-fluid vector" style="width: 50%; height: auto;float:right; margin-right: 0%;">
+		<img src="./images/Work_6.jpg" alt="" class="img-fluid vector" style="width: 50%; height: auto;float:right; margin-right: 0%;margin-left:10%">
 		<div style="margin: 40px; color: navy; margin-left: 15%;">
 			<h3 id="content" style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', 'Arial', 'sans-serif' !important; font-weight: 700; size:40px;line-height: 20px !important">
 			MEET OUR</h3><br> 
