--- a/trainings.html
+++ b/trainings.html
@@ -46,7 +46,7 @@
 		</nav>
 
 	<div class="container" style="margin-top: 30px;">
-		<img  class="img-fluid vector" src="./images/3784896.jpg" style="width: 50%; height: auto;float: right;">
+		<img  class="img-fluid vector" src="./images/3784896.jpg" style="width: 50%; height: auto;float: right;margin-left:10%">
 		<div style="margin-top: 20px; color: navy;" >
 	       <h2 id="content" style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', 'Arial', 'sans-serif' !important; font-weight: 700; size:40px !important;">
 	       GET</h1><br> 
