--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         </div><br><br>
 
         <div>
-            <div class="col-sm-4 pic"> <img class="img1" src="./images/Dillu.jpg"> </div>
-            <div class="col-sm-8 test1">"This is text area where the students give their testimonials and their experience of their interviews and trainings that they have attended."<center> <br>
+            <div> <img class="img1" src="./images/Dillu.jpg"> </div>
+            <div>"This is text area where the students give their testimonials and their experience of their interviews and trainings that they have attended."<center> <br>
                     <p class="by">~ <b>Student Name</b></p>
             </div>
         </div>
